Restrict one-hot to those with at least 10 instances

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -682,6 +682,7 @@
     "    'employ_title',       # replaced by cleaned-up version\n",
     "    'loan_subgrade',      # tainted predictor\n",
     "    'id',                 # unique to each row\n",
+    "    'installment',        # tainted predictor\n",
     "    'interest_rate',      # tainted predictor\n",
     "    'index',              # unique to each row\n",
     "    'issue_date',         # not useful in future, using economic indicators instead\n",
@@ -707,9 +708,9 @@
     "# the value is missing may itself be significant; and using the median value\n",
     "# for continuous predictors)\n",
     "#\n",
-    "# (2) expand categorical predictors into a set of one-hot-encoded columns \n",
-    "# (using 0 and 1, and limiting ourselves to the 50 most common values in the\n",
-    "# training set)\n",
+    "# (2) expand categorical predictors into a set of one-hot-encoded columns --\n",
+    "# using 0 and 1, and limiting ourselves to the 50 most common values in the\n",
+    "# training set, provided they have at least 10 instances (to prevent overfitting)\n",
     "#\n",
     "# (3) standardize continuous predictors using the mean and stdev of the\n",
     "# training set\n",
@@ -722,7 +723,8 @@
     "        print colname, x_orig[colname].dtype\n",
     "        if x_orig[colname].dtype == 'object':\n",
     "            values = x[colname].fillna('MISSING')\n",
-    "            value_columns = x_orig[colname].fillna('MISSING').value_counts().index\n",
+    "            value_column_counts = x_orig[colname].fillna('MISSING').value_counts()\n",
+    "            value_columns = value_column_counts[value_column_counts > 10].index\n",
     "            if len(value_columns) > 50:\n",
     "                value_columns = value_columns[:50]\n",
     "            for val in value_columns:\n",
@@ -1116,9 +1118,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [amg1]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [amg1]"
   },
   "language_info": {
    "codemirror_mode": {
