Close off the AUC curve by ending at (0, 0) always

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -105,6 +105,11 @@
     "        prev_false_positive = false_positive_rate\n",
     "        prev_true_positive = true_positive_rate\n",
     "\n",
+    "    # Close off the curve by ending at (0, 0) regardless of what the last point was\n",
+    "    roc_data.append((0, 0))\n",
+    "    # Use midpoint rectangle method to approximate AUC\n",
+    "    auc += (0 + prev_true_positive) / 2.0 * (prev_false_positive - 0)\n",
+    "\n",
     "    plt.plot([roc[0] for roc in roc_data],\n",
     "             [roc[1] for roc in roc_data],\n",
     "            )\n",
