Filter out ipr which is a tainted predictor

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -685,6 +685,7 @@
     "    'installment',        # tainted predictor\n",
     "    'interest_rate',      # tainted predictor\n",
     "    'index',              # unique to each row\n",
+    "    'ipr',                # tainted predictor\n",
     "    'issue_date',         # not useful in future, using economic indicators instead\n",
     "    'earliest_credit',    # has been converted to months_since_earliest_credit\n",
     "    'recoveries',         # post hoc for profit calculation only\n",
