Create cross-terms excluding one-hots

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -151,6 +151,15 @@
    "source": [
     "model_performance = {}\n",
     "\n",
+    "def cross_terms(x):\n",
+    "    # compute cross terms -- but not two one-hots against each other, because memory\n",
+    "    x_out = x[x.columns]\n",
+    "    for c1, c2 in combinations(x.columns, 2):\n",
+    "        if '__' in c1 and '__' in c2:\n",
+    "            continue\n",
+    "        x_out[c1 + ' x ' + c2] = x[c1] * x[c2]\n",
+    "    return x_out\n",
+    "\n",
     "def eval_model_all_years(model_factory, \n",
     "                         columns = None, \n",
     "                         poly_degree = None, \n",
