Backport cross terms to ipynb

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -131,6 +131,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model_performance = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cross_terms(x, poly_degree):\n",
+    "    # compute cross terms -- but not two one-hots against each other, because memory\n",
+    "    x_out = x[x.columns]\n",
+    "    for degree in range(2, poly_degree+1):\n",
+    "        for col in x.columns:\n",
+    "            if '__' in col:\n",
+    "                continue\n",
+    "            x_out[col + '^' + str(degree)] = x[col] ** degree\n",
+    "    for c1, c2 in combinations(x.columns, 2):\n",
+    "        if '__' in c1 and '__' in c2:\n",
+    "            continue\n",
+    "        x_out[c1 + ' x ' + c2] = x[c1] * x[c2]\n",
+    "    return x_out\n",
+    "\n",
+    "def cross_term_names(x, poly_degree):\n",
+    "    # compute cross terms -- but not two one-hots against each other, because memory\n",
+    "    x_out = list(x.columns)\n",
+    "    for degree in range(2, poly_degree+1):\n",
+    "        for col in x.columns:\n",
+    "            if '__' in col:\n",
+    "                continue\n",
+    "            x_out += [col + '^' + str(degree)]\n",
+    "    for c1, c2 in combinations(x.columns, 2):\n",
+    "        if '__' in c1 and '__' in c2:\n",
+    "            continue\n",
+    "        x_out += [c1 + ' x ' + c2]\n",
+    "    return x_out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
@@ -149,17 +197,6 @@
     }
    ],
    "source": [
-    "model_performance = {}\n",
-    "\n",
-    "def cross_terms(x):\n",
-    "    # compute cross terms -- but not two one-hots against each other, because memory\n",
-    "    x_out = x[x.columns]\n",
-    "    for c1, c2 in combinations(x.columns, 2):\n",
-    "        if '__' in c1 and '__' in c2:\n",
-    "            continue\n",
-    "        x_out[c1 + ' x ' + c2] = x[c1] * x[c2]\n",
-    "    return x_out\n",
-    "\n",
     "def eval_model_all_years(model_factory, \n",
     "                         columns = None, \n",
     "                         poly_degree = None, \n",
@@ -187,9 +224,8 @@
     "        x_local_test = x_test[columns]\n",
     "        \n",
     "    if poly_degree is not None:\n",
-    "        poly_xform = Preprocessing.PolynomialFeatures(degree=poly_degree, include_bias=False)\n",
-    "        x_local = pd.DataFrame(poly_xform.fit_transform(x_local))\n",
-    "        x_local_test = pd.DataFrame(poly_xform.fit_transform(x_local_test))\n",
+    "        x_local = cross_terms(x_local, poly_degree)\n",
+    "        x_local_test = cross_terms(x_local_test, poly_degree)\n",
     "        \n",
     "    indexes = range(len(years))\n",
     "    np.random.shuffle(indexes)\n",
