Try using the linear model based on returns to go back to a classifier. Not terribly useful

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -4223,7 +4223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -4239,6 +4239,43 @@
    "source": [
     "linear_returns_model = RidgeCV().fit(x_expanded, returns_train)\n",
     "print linear_returns_model.score(x_test_expanded, returns_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7 ;  F1= 0.917951464606 ;  prec= 0.848375919291\n",
+      "[[    3 12865]\n",
+      " [    3 71983]]\n",
+      "0.8 ;  F1= 0.915066203882 ;  prec= 0.851532406632\n",
+      "[[  457 12411]\n",
+      " [  803 71183]]\n",
+      "0.9 ;  F1= 0.729707044108 ;  prec= 0.895082165785\n",
+      "[[ 7671  5197]\n",
+      " [27649 44337]]\n",
+      "1.0 ;  F1= 0.0704984944798 ;  prec= 0.961664841183\n",
+      "[[12763   105]\n",
+      " [69352  2634]]\n",
+      "1.1 ;  F1= 0.000222240742284 ;  prec= 1.0\n",
+      "[[12868     0]\n",
+      " [71978     8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lin_predict = linear_returns_model.predict(x_test_expanded)\n",
+    "for p in np.arange(0.7, 1.2, 0.1):\n",
+    "    yhat_lin = lin_predict >= p\n",
+    "    print p, ';  F1=', f1_score(y_test, yhat_lin, pos_label=1), ';  prec=',y_test[yhat_lin].mean()\n",
+    "    print confusion_matrix(y_test, yhat_lin)"
    ]
   },
   {
