Split emp_title into employer and exmployee_title based on the date

--- a/Data_Loading.ipynb
+++ b/Data_Loading.ipynb
@@ -631,7 +631,10 @@
     "        s = s[:-4]\n",
     "    return s\n",
     "\n",
-    "data_filtered['emp_cleaned'] = data_filtered.employ_title.apply(cleanup_emp_title)"
+    "data_filtered['emp_cleaned'] = np.where(\n",
+    "    pd.to_datetime(data_filtered.issue_date) >= datetime.datetime(2013, 9, 23),\n",
+    "    data_filtered.employ_title.apply(cleanup_emp_title),\n",
+    "    '')\n"
    ]
   },
   {
