--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -278,7 +278,10 @@
     "        'auc': area_under_curve,\n",
     "    }\n",
     "    \n",
-    "    return model"
+    "    logfile = open('model_performance.txt', 'a')\n",
+    "    logfile.write(json.dumps({'name': model_name, 'perf': model_performance[model_name]}))\n",
+    "    logfile.close()\n",
+    "    return model\n"
    ]
   },
   {
