Track model performance in an aux file and then have a separate script to format it

--- a/Modelling_Framework.ipynb
+++ b/Modelling_Framework.ipynb
@@ -279,7 +279,7 @@
     "    }\n",
     "    \n",
     "    logfile = open('model_performance.txt', 'a')\n",
-    "    logfile.write(json.dumps({'name': model_name, 'perf': model_performance[model_name]}))\n",
+    "    logfile.write(json.dumps({'name': model_name, 'perf': model_performance[model_name]}) + '\\n')\n",
     "    logfile.close()\n",
     "    return model\n"
    ]
